# assistantbot

./: .env.example  .gitignore  .vercelignore  Caddyfile  Dockerfile  Makefile  README.md  alembic.ini  bot_capabilities.html  bot_usage_guide.html  docker-compose.yml  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_bot_sessions.py
deploy/oracle/: Caddyfile.template  backup-memory.sh  deploy.env.example  server-deploy.sh  update.sh
miniapp/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
miniapp/src/: App.tsx  main.tsx  styles.css
miniapp/src/components/: ActionButton.tsx  PixelAssistant.tsx  Tabs.tsx
price_lifestyle_bot/app/: __init__.py  config.py  logging_config.py  main.py
tests/: test_admin_tools.py  test_assistant_extensions.py  test_assistant_foundation.py  test_basket_parser.py  test_bot_menu.py  test_chat_dialogue.py  test_command_registry.py  test_config.py  test_dialogue_handler.py  test_features.py  test_file_io.py  test_formatting.py  test_gbrain_patterns.py  test_knowledge_ingestion.py  test_lifestyle_features.py  test_live_price_refresh.py  test_llm_client.py  test_market_brief.py  test_market_watch.py  test_media_understanding.py  test_memory_tree.py  test_middlewares.py  test_mini_app_state.py  test_obsidian_memory.py  test_obsidian_memory_assistant.py  test_price_comparator.py  test_price_health.py  test_product_matcher.py  test_product_normalizer.py  test_reminder_delivery.py  test_scrape_run_status.py  test_scraper_contracts.py  test_source_connectors.py
(+104 files in other folders)
